--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="././img/favicon.ico" type="image/x-icon">
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lora|Philosopher|Julius Sans One|Tenor Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora|Philosopher|Quattrocento Sans|Tenor Sans|Sawarabi Mincho" rel="stylesheet">
 
 
     <link rel="stylesheet" type="text/css" href="././src/storymap.2.5.css">
