--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <h1 class="display-4 d-flex justify-content-center">Flyfishing across Wisconsin</h1>
 
 
-                    <small class="d-flex justify-content-center" style="color: rgb(255, 250, 240)"><b><p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p></b>
-                    </small>
+                    <big class="d-flex justify-content-center" style="color: rgb(10, 61, 105)"><b><p><em>"You can't say enough about fishing. Though the sport of kings, it's just what the deadbeat ordered."</em><br> ~ Thomas McGuane <cite>The Longest Silence</cite></p></b>
+                    </big>
                 </div>
             </section>
             <section data-scene="centralsands">
